syntax = "proto3";

package ASProto;

message UVec3 {
  uint32 x = 1;
  uint32 y = 2;
  uint32 z = 3;
};

message IVec3 {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
};

message Colour {
  float r = 1;
  float g = 2;
  float b = 3;
};

message Header {
  UVec3 dimensions = 1;
  uint32 voxelCount = 2;
  uint32 nodeCount = 3;
}

message AnimationDiff {
  uint32 type = 1;
  IVec3 position = 2;
  Colour colour = 3;
}

message AnimationFrames {
  repeated AnimationDiff diffs = 1;
}

message Animation {
  repeated AnimationFrames frames = 1;
}
